tests/data/annotations/standard/annotations-ingress-snippets.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/server-snippets: "tcp_nodelay on;"
  name: annotations-ingress
spec:
  rules:
  - host: annotations.example.com
    http:
      paths:
      - path: /backend2
        backend:
          serviceName: backend2-svc
          servicePort: 80
