tests/data/annotations/standard/annotations-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: annotations-ingress
spec:
  rules:
  - host: annotations.example.com
    http:
      paths:
      - path: /backend2
        backend:
          serviceName: backend2-svc
          servicePort: 80
      - path: /backend1
        backend:
          serviceName: backend1-svc
          servicePort: 80
