tests/data/annotations/standard/snippets-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/server-snippets: "tcp_nodelay on;"
  name: annotation-ingress
spec:
  rules:
    - host: annotations.example.com
      http:
        paths:
          - path: /backend1
            backend:
              serviceName: backend1-svc
              servicePort: 80
